--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="
+      Topnews is a leading online news platform that delivers up-to-date and reliable news stories from around the world. Our team of experienced journalists and editors work around the clock to bring you the latest news across various categories such as politics, business, technology, sports, entertainment, and more."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
